# check_samfs

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  README  check_samfs.p5m  configure  configure.ac
include/pub/: catalog.h  devstat.h  lib.h  listio.h  mig.h  rminfo.h  sam_errno.h  samrpc.h  sefstructs.h  sefvals.h  stat.h  version.h
src/: ack_samfault.c  check_samfs.c  sammgmt.c  sammgmt.h
